--- a/Resources/Private/Templates/Mobile/List.html
+++ b/Resources/Private/Templates/Mobile/List.html
@@ -1,15 +1,11 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 {namespace mobile=NITSAN\NsMobile\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:layout name="Default" />
 
 <f:section name="content">
-  <f:debug title="List/Pagiantion" inline="1">{_all}</f:debug>
   <div class="container my-5" id="Filter-Container">
 
-    <div class="my-5 p-5 bg-{color.style.bgColor}">
-      <h1 class="text-{color.style.fontcolor}">Extension Configuration</h1>
-    </div>
     <div class="container d-flex justify-content-end my-3 mb-3">
       <label for="select1" class="form-label mx-2">
         <f:link.action action="new">
@@ -74,8 +70,15 @@
         <f:form.button type="button" class="btn btn-secondary my-2" id="filter">
           <f:translate key="tx_nsmobile_domain_model_mobile.filter" />
         </f:form.button>
+        <f:form.button type="button" class="btn btn-danger mx-2 my-2" id="reset">
+          Reset
+        </f:form.button>
       </div>
     </f:form>
+  </div>
+
+  <div id="loader" style="display: none;">
+    <p>Loading...</p>
   </div>
 
   <div id="container-data">
